Changes to be committed: 	modified:   .gitignore 	modified:   Training_TempCNN_2T_Floods_Charter_Rio_Grande_do_Sul.ipynb 	modified:   Training_TempCNN_4T_Floods_Charter_Rio_Grande_do_Sul.ipynb 	new file:   webservices/exercicio_webservices_cesar.ipynb 	new file:   webservices/exercicio_webservices_cesar_artigo.ipynb 	new file:   webservices/exercicio_webservices_cesar_artigo_imagens_separadas.ipynb

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ Training_TempCNN_4T_Floods_Charter_Rio_Grande_do_Sul copy.ipynb
 modelos
 *.zip
 patches_charter
+Training_TempGRU_4T_Floods_Charter_Rio_Grande_do_Sul-com_erro.ipynb
+Training_TempCNN_4T_Floods_Charter_Rio_Grande_do_Sul_Mapas_Coordenadas.ipynb
