--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,7 @@ modelos
 patches_charter
 Training_TempGRU_4T_Floods_Charter_Rio_Grande_do_Sul-com_erro.ipynb
 Training_TempCNN_4T_Floods_Charter_Rio_Grande_do_Sul_Mapas_Coordenadas.ipynb
+*plot_predicts_180.ipynb
+*.keras
+*flatten_dense.ipynb
+*BGRNIR.ipynb
